--- a/src/story-file.css
+++ b/src/story-file.css
@@ -1,3 +1,19 @@
+a {
+  text-decoration: none;
+}
+
+.anchor {
+  opacity: 0;
+  float: left;
+  padding-right: 4px;
+  padding-top: 10px;
+  font-size: 13px;
+}
+
+h1:hover .anchor {
+  opacity: 1;
+}
+
 .story-list {
   display: flex;
   flex-wrap: wrap;
